--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,130 +1,205 @@
-  <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"></li>
-      <li data-bs-target="#myCarousel" data-bs-slide-to="1"></li>
-      <li data-bs-target="#myCarousel" data-bs-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-
-        <div class="container">
-          <div class="carousel-caption text-start">
-            <h1>Example headline.</h1>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-
-        <div class="container">
-          <div class="carousel-caption">
-            <h1>Another example headline.</h1>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-
-        <div class="container">
-          <div class="carousel-caption text-end">
-            <h1>One more for good measure.</h1>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-          </div>
-        </div>
-      </div>
+<section class="py-5 text-center container">
+  <div class="row py-lg-5">
+    <div class="col-lg-6 col-md-8 mx-auto">
+      <h1 class="fw-light">Teensy Bit</h1>
+      <p class="lead text-muted">Saving in home daycare owners time, money & frustration with a simple set of life-saving features at a teensy price. Coming soon.</p>
+      <p>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up">
+          Get Started
+        </button>
+        <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#email-sign-up">
+          Sign Up For Emails
+        </button>
+      </p>
     </div>
-    <a class="carousel-control-prev" href="#myCarousel" role="button" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#myCarousel" role="button" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </a>
   </div>
+</section>
 
 
-  <!-- Marketing messaging and featurettes
-  ================================================== -->
-  <!-- Wrap the rest of the page in another container to center all the content. -->
+<!-- Marketing messaging and featurettes
+================================================== -->
+<!-- Wrap the rest of the page in another container to center all the content. -->
 
-  <div class="container marketing">
+<div class="container marketing">
 
-    <!-- Three columns of text below the carousel -->
-    <div class="row">
-      <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+  <!-- Three columns of text below the carousel -->
+  <div class="row">
+    <div class="col-lg-4">
+      <i class="fas fa-money-bill-wave fa-10x text-success"></i>
+      <h2>Auto Payments</h2>
+      <p>No more late payments, manually sending invoices or spending hours a month on dealing with money, now you can have that time back for yourself.</p>
+      <p><a class="btn btn-secondary" href="#payments" role="button">View details &raquo;</a></p>
+    </div><!-- /.col-lg-4 -->
+    <div class="col-lg-4">
+      <i class="fas fa-file-alt fa-10x text-warning"></i>
 
-        <h2>Heading</h2>
-        <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-      </div><!-- /.col-lg-4 -->
-      <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
-        <h2>Heading</h2>
-        <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-      </div><!-- /.col-lg-4 -->
-      <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
-        <h2>Heading</h2>
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-      </div><!-- /.col-lg-4 -->
-    </div><!-- /.row -->
+      <h2>Online Paperwork</h2>
+      <p>Need some paper work signed and returned? No more printing, or holding up parents at the door. They can complete and return on their own wherever.</p>
+      <p><a class="btn btn-secondary" href="#paperwork" role="button">View details &raquo;</a></p>
+    </div><!-- /.col-lg-4 -->
+    <div class="col-lg-4">
+      <i class="fas fa-comments fa-10x text-primary"></i>
+      <h2>Sharing & Messaging</h2>
+      <p>Want too share a cute photo, have it sent to the appropriate parents in a few simple steps? Or send a message out to all your parents? Never been easier.</p>
+      <p><a class="btn btn-secondary" href="#sharing" role="button">View details &raquo;</a></p>
+    </div><!-- /.col-lg-4 -->
+  </div><!-- /.row -->
 
 
-    <!-- START THE FEATURETTES -->
+  <!-- START THE FEATURETTES -->
+  <div id="features">
+    <hr class="featurette-divider" >
 
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
+    <div class="row featurette" id="payments">
       <div class="col-md-7">
-        <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <h2 class="featurette-heading">Auto Payments & Invoicing. <span class="text-muted">Keep your bank account full.</span></h2>
+        <p class="lead">Never have a missed payment or late again. You will be able to set all your parents up on an automatic payment schedule that will save you time and ensure you get your hard earned dollars into your account. If auto payments aren't for you, then we will send invoices for you, and reminders via many communcation channels to ensure you get your payments.</p>
+        <button type="button" class="w-100 mb-3 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up">
+          Get Started
+        </button>
       </div>
-      <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
+      <div class="col-md-5 xl-font d-inline-flex align-items-center justify-content-center">
+        <i class="fas fa-money-bill-wave fa-10x text-success"></i>
       </div>
     </div>
 
     <hr class="featurette-divider">
 
-    <div class="row featurette">
+    <div class="row featurette" id="paperwork">
       <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <h2 class="featurette-heading">Online Paperwork. <span class="text-muted">Save yourself headaches.</span></h2>
+        <p class="lead">There are so many forms that parents need to read and sign, and for you to keep up on. Create these in the app so it will keep up on them automaticly for you, and make them available wherever the internet is!</p>
+        <button type="button" class="w-100 mb-3 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up">
+          Get Started
+        </button>
       </div>
-      <div class="col-md-5 order-md-1">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
+      <div class="col-md-5 xl-font d-inline-flex align-items-center justify-content-center order-md-1">
+        <i class="fas fa-file-alt fa-10x text-warning"></i>
       </div>
     </div>
 
     <hr class="featurette-divider">
 
-    <div class="row featurette">
+    <div class="row featurette" id="sharing">
       <div class="col-md-7">
-        <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <h2 class="featurette-heading">Photo & file sharing. <span class="text-muted">Easy for you, and parents love it!</span></h2>
+        <p class="lead">Take a photo, tag the kids in it, done. Its now automaticly shared and available to the parents it may concern. Do this with any document or text you may need to share with parents. Easy, simple and saves you time and makes the parents happy!</p>
+        <button type="button" class="w-100 mb-3 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up">
+          Get Started
+        </button>
       </div>
-      <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
+      <div class="col-md-5 xl-font d-inline-flex align-items-center justify-content-center">
+        <i class="fas fa-camera fa-10x text-danger"></i>
       </div>
     </div>
 
     <hr class="featurette-divider">
+  
+    <div class="row featurette" id="messaging">
+      <div class="col-md-7 order-md-2">
+        <h2 class="featurette-heading">Messaging. <span class="text-muted">Broadcast, instant message and text.</span></h2>
+        <p class="lead">Often you need to message all your parents, or a select group of them. This makes it easy to message them via email, text or in-app messages. Set up automatic messages to remind parents to bring supplies or simply let them know how their kid is doing. All in one place. Easy.</p>
+        <button type="button" class="w-100 mb-3 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up">
+          Get Started
+        </button>
+      </div>
+      <div class="col-md-5 xl-font d-inline-flex align-items-center justify-content-center order-md-1">
+        <i class="fas fa-comments fa-10x text-primary"></i>
+      </div>
+    </div>
 
-    <!-- /END THE FEATURETTES -->
+    <hr class="featurette-divider">
+  </div>
+  <div class="col-12 text-center mb-4" id="pricing">
+    <h2 class="featurette-heading">Pricing. </h2>
+    <h3 class="text-muted">One simple set of features, two ways to pay. 60 day money-back guarantee!</h3>
+  </div>
+  <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+  <div class="col">
+    <div class="card mb-4 shadow-sm">
+    <div class="card-header">
+      <h4 class="my-0 fw-normal">Free</h4>
+    </div>
+    <div class="card-body">
+      <h1 class="card-title pricing-card-title">Free Two Week Trial</h1>
+      <ul class="list-unstyled mt-3 mb-4">
+        <li>20 children</li>
+        <li>Full Feature Set!</li>
+        <li>Standard Credit Card Fees (2.9% + 30¢ per charge)</li>
+        <li>0.80% ACH Transfers</li>
+        <li>Opt-in to payment plan after two weeks are up</li>
+      </ul>
+      <button type="button" class="w-100 btn btn-lg btn-outline-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up">
+        Sign up for free
+      </button>
+    </div>
+  </div>
+  </div>
+  <div class="col">
+    <div class="card mb-4 shadow-sm">
+    <div class="card-header">
+      <h4 class="my-0 fw-normal">Monthly</h4>
+    </div>
+    <div class="card-body">
+      <h1 class="card-title pricing-card-title">$9.99 <small class="text-muted">/ mo</small></h1>
+      <ul class="list-unstyled mt-3 mb-4">
+        <li>20 children</li>
+        <li>Full feature set!</li>
+        <li>Standard Credit Card Fees (2.9% + 30¢ per charge)</li>
+        <li>0.80% ACH Transfers</li>
+        <li>Monthly fees start after two week free trial</li>
+      </ul>
+      <button type="button" class="w-100 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up">
+          Get Started
+        </button>
+    </div>
+  </div>
+  </div>
+  <div class="col">
+    <div class="card mb-4 shadow-sm">
+    <div class="card-header">
+      <h4 class="my-0 fw-normal">Yearly</h4>
+    </div>
+    <div class="card-body">
+      <h1 class="card-title pricing-card-title">$99 <small class="text-muted">/ year</small></h1>
+      <ul class="list-unstyled mt-3 mb-4">
+        <li>Savings of $20 per year</li>
+        <li>Full feature set!</li>
+        <li>Standard Credit Card Fees (2.9% + 30¢ per charge)</li>
+        <li>0.80% ACH Transfers</li>
+        <li>Yearly fees start after two week free trial</li>
+      </ul>
+      <button type="button" class="w-100 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up">
+        Get Started
+      </button>
+    </div>
+  </div>
+  </div>
+</div>
+<!-- /END THE FEATURETTES -->
+<!-- START CONTACT -->
+<div id="contact" data-controller='contact-form'>
+  <div class="row justify-content-center mb-3">
+    <div class="col-12 text-center mb-4" id="contact">
+      <h2 class="featurette-heading">Contact Us. </h2>
+      <h3 class="text-muted">Do you have a question for us?</h3>
+    </div>
+    <div class="card">
+      <div class="card-body">
+        <%= simple_form_for Contact.new, local: true do |f| %>
+          <%= f.error_notification %>
+          <%= f.input :name %>
+          <%= f.input :email %>
+          <%= f.input :message %>
+          <%= f.input :opt_in_emails, as: :boolean, label: "Opt In To Recieve Emails" %>
+          <%= f.button :submit, "Submit", class: "btn-primary" %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- /END CONTACT -->
 
-  </div><!-- /.container -->
+<%= render partial: "contacts/email_opt_in_modal", locals: { modal_name: "email-sign-up"} %>
+
+</div><!-- /.container -->
