--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -6,11 +6,14 @@
 /* Padding below the footer and lighter body text */
 
 body {
-    padding-top: 3rem;
+    // padding-top: 3rem;
     padding-bottom: 3rem;
     color: #5a5a5a;
   }
-  
+
+  .xl-font {
+    font-size: 24px;
+  }
   
   /* CUSTOMIZE THE CAROUSEL
   -------------------------------------------------- */
@@ -70,6 +73,17 @@ body {
     line-height: 1;
     /* rtl:remove */
     letter-spacing: -.05rem;
+  }
+  
+  /* Bootstrap
+  ------------------------- */
+
+  .form-group {
+    margin-bottom: 1rem;
+  }
+
+  label {
+    margin-bottom: .5rem;
   }
   
   
