Contact Message sends an email to my contact email

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -121,9 +121,9 @@
       <h4 class="my-0 fw-normal">Free</h4>
     </div>
     <div class="card-body">
-      <h1 class="card-title pricing-card-title">Free Two Week Trial</h1>
+      <h1 class="card-title pricing-card-title">Free Trial</h1>
       <ul class="list-unstyled mt-3 mb-4">
-        <li>20 children</li>
+        <li>Two Weeks free trial (Credit card fees still apply)</li>
         <li>Full Feature Set!</li>
         <li>Standard Credit Card Fees (2.9% + 30¢ per charge)</li>
         <li>0.80% ACH Transfers</li>
