--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,10 +4,10 @@
       <h1 class="fw-light">Teensy Bit</h1>
       <p class="lead text-muted">Saving in home daycare owners time, money & frustration with a simple set of life-saving features at a teensy price. Coming soon.</p>
       <p>
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up">
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up-get_started">
           Get Started
         </button>
-        <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#email-sign-up">
+        <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#email-sign-up-email_signup">
           Sign Up For Emails
         </button>
       </p>
@@ -54,7 +54,7 @@
       <div class="col-md-7">
         <h2 class="featurette-heading">Auto Payments & Invoicing. <span class="text-muted">Keep your bank account full.</span></h2>
         <p class="lead">Never have a missed payment or late again. You will be able to set all your parents up on an automatic payment schedule that will save you time and ensure you get your hard earned dollars into your account. If auto payments aren't for you, then we will send invoices for you, and reminders via many communcation channels to ensure you get your payments.</p>
-        <button type="button" class="w-100 mb-3 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up">
+        <button type="button" class="w-100 mb-3 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up-feature">
           Get Started
         </button>
       </div>
@@ -69,7 +69,7 @@
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Online Paperwork. <span class="text-muted">Save yourself headaches.</span></h2>
         <p class="lead">There are so many forms that parents need to read and sign, and for you to keep up on. Create these in the app so it will keep up on them automaticly for you, and make them available wherever the internet is!</p>
-        <button type="button" class="w-100 mb-3 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up">
+        <button type="button" class="w-100 mb-3 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up-feature">
           Get Started
         </button>
       </div>
@@ -84,7 +84,7 @@
       <div class="col-md-7">
         <h2 class="featurette-heading">Photo & file sharing. <span class="text-muted">Easy for you, and parents love it!</span></h2>
         <p class="lead">Take a photo, tag the kids in it, done. Its now automaticly shared and available to the parents it may concern. Do this with any document or text you may need to share with parents. Easy, simple and saves you time and makes the parents happy!</p>
-        <button type="button" class="w-100 mb-3 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up">
+        <button type="button" class="w-100 mb-3 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up-feature">
           Get Started
         </button>
       </div>
@@ -99,7 +99,7 @@
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Messaging. <span class="text-muted">Broadcast, instant message and text.</span></h2>
         <p class="lead">Often you need to message all your parents, or a select group of them. This makes it easy to message them via email, text or in-app messages. Set up automatic messages to remind parents to bring supplies or simply let them know how their kid is doing. All in one place. Easy.</p>
-        <button type="button" class="w-100 mb-3 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up">
+        <button type="button" class="w-100 mb-3 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up-feature">
           Get Started
         </button>
       </div>
@@ -110,96 +110,100 @@
 
     <hr class="featurette-divider">
   </div>
+  <!-- /END THE FEATURETTES -->
+  <!-- START THE PRICING -->
   <div class="col-12 text-center mb-4" id="pricing">
     <h2 class="featurette-heading">Pricing. </h2>
     <h3 class="text-muted">One simple set of features, two ways to pay. 60 day money-back guarantee!</h3>
   </div>
   <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
-  <div class="col">
-    <div class="card mb-4 shadow-sm">
-    <div class="card-header">
-      <h4 class="my-0 fw-normal">Free</h4>
+    <div class="col">
+      <div class="card mb-4 shadow-sm">
+        <div class="card-header">
+          <h4 class="my-0 fw-normal">Free</h4>
+        </div>
+        <div class="card-body">
+          <h1 class="card-title pricing-card-title">Free Trial</h1>
+          <ul class="list-unstyled mt-3 mb-4">
+            <li>Two Weeks free trial (Credit card fees still apply)</li>
+            <li>Full Feature Set!</li>
+            <li>Standard Credit Card Fees (2.9% + 30¢ per charge)</li>
+            <li>0.80% ACH Transfers</li>
+            <li>Opt-in to payment plan after two weeks are up</li>
+          </ul>
+          <button type="button" class="w-100 btn btn-lg btn-outline-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up-free_trial">
+            Sign up for free
+          </button>
+        </div>
+      </div>
     </div>
-    <div class="card-body">
-      <h1 class="card-title pricing-card-title">Free Trial</h1>
-      <ul class="list-unstyled mt-3 mb-4">
-        <li>Two Weeks free trial (Credit card fees still apply)</li>
-        <li>Full Feature Set!</li>
-        <li>Standard Credit Card Fees (2.9% + 30¢ per charge)</li>
-        <li>0.80% ACH Transfers</li>
-        <li>Opt-in to payment plan after two weeks are up</li>
-      </ul>
-      <button type="button" class="w-100 btn btn-lg btn-outline-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up">
-        Sign up for free
-      </button>
+    <div class="col">
+      <div class="card mb-4 shadow-sm">
+        <div class="card-header">
+          <h4 class="my-0 fw-normal">Monthly</h4>
+        </div>
+        <div class="card-body">
+          <h1 class="card-title pricing-card-title">$9.99 <small class="text-muted">/ mo</small></h1>
+          <ul class="list-unstyled mt-3 mb-4">
+            <li>20 children</li>
+            <li>Full feature set!</li>
+            <li>Standard Credit Card Fees (2.9% + 30¢ per charge)</li>
+            <li>0.80% ACH Transfers</li>
+            <li>Monthly fees start after two week free trial</li>
+          </ul>
+          <button type="button" class="w-100 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up-monthly">
+              Get Started
+            </button>
+        </div>
+      </div>
     </div>
-  </div>
-  </div>
-  <div class="col">
-    <div class="card mb-4 shadow-sm">
-    <div class="card-header">
-      <h4 class="my-0 fw-normal">Monthly</h4>
-    </div>
-    <div class="card-body">
-      <h1 class="card-title pricing-card-title">$9.99 <small class="text-muted">/ mo</small></h1>
-      <ul class="list-unstyled mt-3 mb-4">
-        <li>20 children</li>
-        <li>Full feature set!</li>
-        <li>Standard Credit Card Fees (2.9% + 30¢ per charge)</li>
-        <li>0.80% ACH Transfers</li>
-        <li>Monthly fees start after two week free trial</li>
-      </ul>
-      <button type="button" class="w-100 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up">
-          Get Started
-        </button>
-    </div>
-  </div>
-  </div>
-  <div class="col">
-    <div class="card mb-4 shadow-sm">
-    <div class="card-header">
-      <h4 class="my-0 fw-normal">Yearly</h4>
-    </div>
-    <div class="card-body">
-      <h1 class="card-title pricing-card-title">$99 <small class="text-muted">/ year</small></h1>
-      <ul class="list-unstyled mt-3 mb-4">
-        <li>Savings of $20 per year</li>
-        <li>Full feature set!</li>
-        <li>Standard Credit Card Fees (2.9% + 30¢ per charge)</li>
-        <li>0.80% ACH Transfers</li>
-        <li>Yearly fees start after two week free trial</li>
-      </ul>
-      <button type="button" class="w-100 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up">
-        Get Started
-      </button>
-    </div>
-  </div>
-  </div>
-</div>
-<!-- /END THE FEATURETTES -->
-<!-- START CONTACT -->
-<div id="contact" data-controller='contact-form'>
-  <div class="row justify-content-center mb-3">
-    <div class="col-12 text-center mb-4" id="contact">
-      <h2 class="featurette-heading">Contact Us. </h2>
-      <h3 class="text-muted">Do you have a question for us?</h3>
-    </div>
-    <div class="card">
-      <div class="card-body">
-        <%= simple_form_for Contact.new, local: true do |f| %>
-          <%= f.error_notification %>
-          <%= f.input :name %>
-          <%= f.input :email %>
-          <%= f.input :message %>
-          <%= f.input :opt_in_emails, as: :boolean, label: "Opt In To Recieve Emails" %>
-          <%= f.button :submit, "Submit", class: "btn-primary" %>
-        <% end %>
+    <div class="col">
+      <div class="card mb-4 shadow-sm">
+        <div class="card-header">
+          <h4 class="my-0 fw-normal">Yearly</h4>
+        </div>
+        <div class="card-body">
+          <h1 class="card-title pricing-card-title">$99 <small class="text-muted">/ year</small></h1>
+          <ul class="list-unstyled mt-3 mb-4">
+            <li>Savings of $20 per year</li>
+            <li>Full feature set!</li>
+            <li>Standard Credit Card Fees (2.9% + 30¢ per charge)</li>
+            <li>0.80% ACH Transfers</li>
+            <li>Yearly fees start after two week free trial</li>
+          </ul>
+          <button type="button" class="w-100 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up-yearly">
+            Get Started
+          </button>
+        </div>
       </div>
     </div>
   </div>
-</div>
-<!-- /END CONTACT -->
+  <!-- /END THE PRICING -->
+  <!-- START CONTACT -->
+  <div id="contact" data-controller='contact-form'>
+    <div class="row justify-content-center mb-3">
+      <div class="col-12 text-center mb-4" id="contact">
+        <h2 class="featurette-heading">Contact Us. </h2>
+        <h3 class="text-muted">Do you have a question for us?</h3>
+      </div>
+      <div class="card">
+        <div class="card-body">
+          <%= simple_form_for Contact.new, local: true do |f| %>
+            <%= f.error_notification %>
+            <%= f.input :source, as: :hidden, input_html: { value: "message" } %>
+            <%= f.input :name %>
+            <%= f.input :email %>
+            <%= f.input :message %>
+            <%= f.input :opt_in_emails, as: :boolean, label: "Opt In To Recieve Emails" %>
+            <%= f.button :submit, "Submit", class: "btn-primary" %>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- /END CONTACT -->
 
-<%= render partial: "contacts/email_opt_in_modal", locals: { modal_name: "email-sign-up"} %>
-
+  <% Contact.sources.keys.each do |source| %>
+    <%= render partial: "contacts/email_opt_in_modal", locals: { modal_name: "email-sign-up-#{source}", source: source} %>
+  <% end %>
 </div><!-- /.container -->
