Some edits to landing page copy.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -34,13 +34,13 @@
       <i class="fas fa-file-alt fa-10x text-warning"></i>
 
       <h2>Online Paperwork</h2>
-      <p>Need some paper work signed and returned? No more printing, or holding up parents at the door. They can complete and return on their own wherever.</p>
+      <p>Need some paper work signed and returned? No more printing, or holding up parents at the door. They can complete and return online.</p>
       <p><a class="btn btn-secondary" href="#paperwork" role="button">View details &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
     <div class="col-lg-4">
       <i class="fas fa-comments fa-10x text-primary"></i>
       <h2>Sharing & Messaging</h2>
-      <p>Want too share a cute photo, have it sent to the appropriate parents in a few simple steps? Or send a message out to all your parents? Never been easier.</p>
+      <p>Want too share a cute photo, have it sent to the appropriate parents in a few simple steps? Or send a message out to all your parents? Its never been easier.</p>
       <p><a class="btn btn-secondary" href="#sharing" role="button">View details &raquo;</a></p>
     </div><!-- /.col-lg-4 -->
   </div><!-- /.row -->
@@ -53,7 +53,7 @@
     <div class="row featurette" id="payments">
       <div class="col-md-7">
         <h2 class="featurette-heading">Auto Payments & Invoicing. <span class="text-muted">Keep your bank account full.</span></h2>
-        <p class="lead">Never have a missed payment or late again. You will be able to set all your parents up on an automatic payment schedule that will save you time and ensure you get your hard earned dollars into your account. If auto payments aren't for you, then we will send invoices for you, and reminders via many communcation channels to ensure you get your payments.</p>
+        <p class="lead">Never have a missed or late payment again. You will be able to set all your parents up on an automatic payment schedule that will save you time and ensure you get your hard earned dollars into your account. If auto payments aren't for you, then we will send invoices for you, and reminders via many communcation channels to ensure you get your payments.</p>
         <button type="button" class="w-100 mb-3 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up-feature">
           Get Started
         </button>
@@ -68,7 +68,7 @@
     <div class="row featurette" id="paperwork">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Online Paperwork. <span class="text-muted">Save yourself headaches.</span></h2>
-        <p class="lead">There are so many forms that parents need to read and sign, and for you to keep up on. Create these in the app so it will keep up on them automaticly for you, and make them available wherever the internet is!</p>
+        <p class="lead">There are so many forms that parents need to read, sign, and for you to keep up on. Create these in the app so it will keep up on them automaticly for you, and make them available wherever the internet is!</p>
         <button type="button" class="w-100 mb-3 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up-feature">
           Get Started
         </button>
@@ -83,7 +83,7 @@
     <div class="row featurette" id="sharing">
       <div class="col-md-7">
         <h2 class="featurette-heading">Photo & file sharing. <span class="text-muted">Easy for you, and parents love it!</span></h2>
-        <p class="lead">Take a photo, tag the kids in it, done. Its now automaticly shared and available to the parents it may concern. Do this with any document or text you may need to share with parents. Easy, simple and saves you time and makes the parents happy!</p>
+        <p class="lead">Take a photo, tag the kids in it, done. Its now automaticly shared and available to the parents it may concern. Do this with any document or text you may need to share with parents. Easy, simple and saves you time and makes parents happy!</p>
         <button type="button" class="w-100 mb-3 btn btn-lg btn-primary" data-bs-toggle="modal" data-bs-target="#email-sign-up-feature">
           Get Started
         </button>
@@ -145,7 +145,7 @@
         <div class="card-body">
           <h1 class="card-title pricing-card-title">$9.99 <small class="text-muted">/ mo</small></h1>
           <ul class="list-unstyled mt-3 mb-4">
-            <li>20 children</li>
+            <li>Cancel anytime</li>
             <li>Full feature set!</li>
             <li>Standard Credit Card Fees (2.9% + 30¢ per charge)</li>
             <li>0.80% ACH Transfers</li>
