Can send emails via Mailgun

--- a/app/views/contact_mailer/contact_message.html.erb
+++ b/app/views/contact_mailer/contact_message.html.erb
@@ -1,8 +1,8 @@
-<h1>New contact message for Teensy Bit, for: <%= @contact.name %> <%= mail_to @contact.email %></h1>
+<h2>New contact message for Teensy Bit, from: <%= @contact.name %> <%= mail_to @contact.email %></h1>
 <% if @contact.opt_in_emails.present? %>
-<h2>They signed up for emails!</h2>
+<h3>They signed up for emails!</h3>
 <% else %>
-<h2>They did not up for emails.</h2>
+<h3>They did not up for emails.</h3>
 <% end %>
 <p>
   <%= @contact.message %>
