Some copy typos/misspellings fixed Yellow darkened

--- a/app/views/contacts/_email_opt_in_modal.html.erb
+++ b/app/views/contacts/_email_opt_in_modal.html.erb
@@ -9,7 +9,7 @@
         <div class="modal-body">
           <div class="card">
             <div class="card-body">
-              <p>Are app isn't quite ready, yet! We want you to be the first to know when it is! Please fill out this form to receive emails from use with the lastest news for Teensy Bit.</p>
+              <p>Our app isn't quite ready, yet! We want you to be the first to know when it is! Please fill out this form to receive emails from use with the lastest news for Teensy Bit.</p>
               <%= f.error_notification %>
               <%= f.input :name %>
               <%= f.input :email %>
