--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -3,6 +3,6 @@ $primary: #7DD1FF;
 $danger: #FF737C;
 $success: #15D6B6;
 $info: #6698E8;
-$warning: #FFFB63;
+$warning: #eee845;
 
 @import "bootstrap";
